Add questions to the FAQ
This commit adds some questions related to ... to the FAQ page.

--- a/src/pages/general/faq.mdx
+++ b/src/pages/general/faq.mdx
@@ -25,3 +25,7 @@ Probably not. We're currently trying to primarily add original content to Xenyri
 ## Can I apply for staff?
 
 Yes. Check our page on [Staff Applications](/general/applications) for more information.
+
+## More Questions
+
+blah blah ...
